syntax = "proto3";

package greet;
option go_package = "./;greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest { Greeting Greeting = 1; }

message GreetingResponse { string result = 1; }

message GreetingManyTimesRequest { Greeting Greeting = 1; }

message GreetingManyTimesResponse { string result = 1; }

message LongGreetRequest { Greeting Greeting = 1; }

message LongGreetResponse { string result = 1; }

message GreetEveryoneRequest { Greeting Greeting = 1; }

message GreetEveryoneResponse { string result = 1; }

service GreetService {
  // Unary
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetingManyTimesRequest)
      returns (stream GreetingManyTimesResponse) {};

  // Client Streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

  // Server Streamin Client Streaming
  rpc GreetEveryone(stream GreetEveryoneRequest)
      returns (stream GreetEveryoneResponse) {};
}